# bazel_android_kotlin

./: .gitignore  MODULE.bazel  bazel-bazel_android_kotlin
app/: BUILD.bazel
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: MainActivity.kt
common/dashboard/: BUILD.bazel
common/home/: BUILD.bazel
common/notifications/: BUILD.bazel
