module(name = "android-example")

bazel_dep(name = "rules_android", version = "0.1.1")
bazel_dep(name = "rules_kotlin", version = "1.9.0")
bazel_dep(name = "bazel_skylib", version = "1.2.1")

bazel_dep(name = "platforms", version = "0.0.7")

bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.appcompat:appcompat:1.0.2",
        "androidx.core:core-ktx:1.3.0",
        "com.google.android.material:material:1.0.0",
        "androidx.constraintlayout:constraintlayout:1.1.3",
        "androidx.lifecycle:lifecycle-extensions:2.0.0",
        "androidx.navigation:navigation-fragment:2.0.0",
        "androidx.navigation:navigation-ui:2.0.0",
        "androidx.navigation:navigation-fragment-ktx:2.0.0",
        "androidx.navigation:navigation-ui-ktx:2.0.0",
        "androidx.navigation:navigation-runtime-ktx:2.0.0"
    ],
    repositories = [
        "https://maven.google.com",
        "https://jcenter.bintray.com/",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
